Merge remote-tracking branch 'origin/feature/product-detail' into dev